# gc-fast-sbox-eval

./: .gitmodules  CONFIG  LICENSE  README.md  a2bristol.py  garbling-benchmark-simd1000.csv  garbling-benchmark-simd500.csv  garbling-benchmark.py  mantis7.txt  skinny128_128.txt  skinny128_256.txt  skinny128_384.txt  skinny64_128.txt  skinny64_192.txt  skinny64_64.txt  twine128.txt  twine80.txt
BMR/: Key.cpp  Key.h  Register.h
GC/: FakeSecret.h  Instruction.h  Machine.hpp  Processor.h  Processor.hpp  Secret.h  Secret.hpp  ShareSecret.h  ThreadMaster.h  ThreadMaster.hpp  instructions.h
MOTION/src/examples/bristol_evaluator/: CMakeLists.txt  bristol_circuit_eval_main.cpp
Processor/: BaseMachine.cpp  Instruction.hpp  Processor.hpp
Yao/: YaoAndJob.h  YaoCommon.h  YaoCommon.hpp  YaoEvalMaster.cpp  YaoEvalMaster.h  YaoEvalWire.cpp  YaoEvalWire.h  YaoEvaluator.h  YaoGarbleMaster.cpp  YaoGarbleMaster.h  YaoGarbleWire.cpp  YaoGarbleWire.h  YaoGarbler.h  YaoPlayer.cpp  YaoProjGate.cpp  YaoProjGate.h  YaoWire.h  YaoWire.hpp
benchmark-simd1000-proj/: garbling_benchmark-aes128_proj-1000-eval-0  garbling_benchmark-aes128_proj-1000-eval-1  garbling_benchmark-aes128_proj-1000-eval-2  garbling_benchmark-aes128_proj-1000-eval-3  garbling_benchmark-aes128_proj-1000-eval-4  garbling_benchmark-aes128_proj-1000-eval-5  garbling_benchmark-aes128_proj-1000-eval-6  garbling_benchmark-aes128_proj-1000-eval-7  garbling_benchmark-aes128_proj-1000-eval-8  garbling_benchmark-aes128_proj-1000-eval-9  garbling_benchmark-aes128_proj-1000-garbler-0  garbling_benchmark-aes128_proj-1000-garbler-1  (+128 more)
(+292 files in other folders)
